--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css">
   </head>
   <body>
     <div class="card-body" id="card-contain">
@@ -22,5 +23,8 @@
     <button type="button" id="refresh-button" class="btn btn-light button">
       Click to change
     </button>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
